# zam

./: .gitignore  Cargo.toml  LICENSE  README.md  main.z  og.z
src/: error.rs  fields.rs  function.rs  main.rs  misc.rs  naive_map.rs  perf.rs  source.rs  struct.rs
src/analyzer/: block.rs  expression.rs  fun.rs  lookup.rs  main_fn.rs  misc.rs  mod.rs  struct.rs  typ.rs  variable.rs
src/block/: mod.rs
src/cfg/: misc.rs  mod.rs
src/cli/: init.rs  mod.rs  zam.rs
src/expression/: group.rs  mod.rs  number.rs  term.rs  text.rs
src/log/: error.rs  misc.rs  mod.rs
src/parser/: error.rs  log.rs  misc.rs  mod.rs  span.rs
src/project/: block.rs  expression.rs  fun.rs  lookup.rs  main_fn.rs  misc.rs  mod.rs  struct.rs  typ.rs  variable.rs
src/statement/: conditional.rs  loop.rs  mod.rs  variable.rs
src/typ/: generic.rs  mod.rs  trait.rs
src/validator/: block.rs  fun.rs  identifier.rs  lookup.rs  main_fn.rs  mod.rs  struct.rs  typ.rs  variable.rs
src/zam/: fields.rs  identifier.rs  misc.rs  mod.rs  path.rs
src/zam/block/: function.rs  implement.rs  mod.rs  struct.rs  trait.rs  use.rs
src/zam/expression/: array.rs  conditional.rs  group.rs  misc.rs  mod.rs  number.rs  term.rs  text.rs
src/zam/statement/: conditional.rs  loop.rs  mod.rs  variable.rs
src/zam/typ/: generic.rs  kind.rs  misc.rs  mod.rs  trait.rs
