[package]
name = "zam"
version = "0.1.0"
edition = "2021"

[dependencies]
clang = { version = "2.0.0", features = ["runtime"] }
clap = "4.5.28"
colored = "3.0.0"
hexf-parse = "0.2.1"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
