[package]
name = "zam"
version = "0.1.0"
edition = "2021"

[dependencies]
clang = { version = "2.0.0", features = ["runtime"] }
clap = "4.5.28"
colored = "3.0.0"
hashbrown = "0.15.4"
hexf-parse = "0.2.1"
indexmap = "2.9.0"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
linked-hash-map = "0.5.6"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
strsim = "0.11.1"
threadpool = "1.8.1"
toml = "0.8.20"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[profile.dev]
debug = 0
