[package]
name = "zam"
version = "0.1.0"
edition = "2024"

[dependencies]
clang = { version = "2.0.0", features = ["runtime"] }
clap = "4.5.28"
colored = "3.0.0"
hashbrown = { version = "0.15.4", default-features = false, features = [
    "default-hasher",
    "inline-more",
] }
hexf-parse = "0.2.1"
indexmap = "2.9.0"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
strsim = "0.11.1"
threadpool = "1.8.1"
toml = { version = "0.8.20", default-features = false, features = ["parse"] }

[profile.dev]
debug = 0
